# MyFFmpeg

./: .gitignore  1.flv  2.flv  CMakeLists.txt  LibFFmpeg.sln  LibFFmpeg.vcxproj  LibFFmpeg.vcxproj.filters  MyFFmpeg.cpp  MyFFmpeg.h  MyFFmpegState.h  README.md  ldd.sh  main.cpp  t.py
build11/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/: libavfilter.so.8.44.100  libavformat.so.59.27.100  libavutil.so.57.28.100  libswresample.so.4.7.100  libswscale.so.6.7.100
